CHANGES IN FLTK 1.1.7

	- Documentation fixes (STR #648, STR #692, STR #730, STR
	  #744, STR #745)
	- Fl_Help_View now supports the FONT and U elements (STR
	  #815)
	- OpenGL windows that were completely off-screen caused
	  problems with some graphics cards on WIN32 (STR #831)
	- Multiple screen support didn't work on Windows NT and
	  95 (STR #821)
	- Fl_Scrollbar didn't compute the correct knob size when
	  using the "nice" types (STR #845)
	- fl_draw() would segfault on WIN32 if no font was set;
	  it now uses the default font (STR #828)
	- Fl_Browser_ was calling the callback multiple times for
	  a single selection change with FL_WHEN_CHANGED (STR
	  #834)
	- Added "filenew", "fileopen", "filesave", "filesaveas",
	  and "fileprint" symbols with standard toolbar
	  symbology.
	- Updated Fl_Tabs to check the contrast of the label
	  color against the tab background, and to highlight the
	  top 5 lines of the tab pane with the selection color so
	  that selected tabs stand out more.
	- The example programs can now compile separate from the
	  FLTK source distribution (STR #809)
	- The example programs are now installed with the
	  documentation (STR #809)
	- Fixed the drawing of the Fl_Browser_ selection box (STR
	  #786)
	- Dropped Codewarrier project files and support.
	- The FLTK string functions are now compiled in on all
	  systems (STR #774)
	- Fixed symbol demo label bug (STR #777)
	- Fixed position of menu titles (STR #795)
	- Added missing Fl_Window::copy_label() method.
	- Fixed wrong tooltip in fluid (STR #784)
	- Added zlib path to fluid (STR #783)
	- Menus and other pop-up windows now obey screen
	  boundaries on multi-screen displays (STR #781)
	- Fl_Chart would draw outside its bounding box (STR #780)
	- Added Fl::screen_count() and Fl::screen_xywh() APIs to
	  support multi-screen displays.
	- FLUID now supports direct creation of widget classes.
	- Fl_File_Chooser now correctly handles multiple